[package]
name = "netsel"
version = "0.1.1"
edition = "2024"
authors = ["jrtx <610769276@qq.com>"]
description = "A lightweight, Rust-based service registration and discovery system"
repository = "https://github.com/jrtxreal/netsel"
license = "MIT"
keywords = ["service-discovery", "networking", "tokio"]
categories = ["network-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
trust-dns-server = "0.23"
trust-dns-proto = "0.23"
hyper = { version = "1.3", features = ["full"] }

[lib]
name = "netsel"

[[example]]
name = "netsel_server"
path = "examples/netsel_server.rs"

[[example]]
name = "service_b"
path = "examples/service_b.rs"

[[example]]
name = "test_client"
path = "examples/test_client.rs"
